// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[TrendSection]] renders TrendSection with all prop options: {"filterValue":30,"chartType":"bar","metricMeta":{"shortcode":"DftPnk","name":"Daft Punk","newCodeMetricShortcode":"NDftPnk","unit":""},"namespacesTrend":{"key":"aggregate","valueTrend":{"labels":["2022-05-30T12:44:02.022478+00:00","2022-06-01T12:44:02.022478+00:00","2022-06-02T12:44:02.022478+00:00","2022-06-03T12:44:02.022478+00:00","2022-05-28T12:44:02.022478+00:00","2022-05-31T12:44:02.022478+00:00","2022-05-29T12:44:02.022478+00:00","2022-06-04T12:44:02.022478+00:00","2022-06-05T12:44:02.022478+00:00","2022-06-07T12:44:02.022478+00:00","2022-06-06T12:44:02.022478+00:00"],"values":[84,68,78,55,94,51,58,82,90,68,85]},"isPassing":true,"valueDisplay":"85%","analyzerShortcode":"javascript","analyzerLogo":"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg","threshold":50}} 1`] = `
"<div class=\\"space-y-8 border-b border-slate-400 py-4 bg-ink-300\\">
  <div charttype=\\"bar\\" class=\\"px-6\\">
    <div class=\\"flex flex-wrap items-start gap-x-2 gap-y-4 md:flex-nowrap\\">
      <div class=\\"flex-grow space-y-1.5\\">
        <div class=\\"flex min-h-8 items-center gap-x-3\\">
          <div class=\\"flex items-center gap-x-2\\">
            <!---->
            <h1 class=\\"text-lg font-medium leading-tight\\">
              Daft Punk
            </h1>
          </div>
          <z-tag icon-left=\\"metric-high\\" icon-color=\\"juniper\\" size=\\"x-small\\" spacing=\\"px-2 py-0\\" class=\\"border border-slate-400\\"><span class=\\"py-1.5 text-xxs font-semibold uppercase leading-none tracking-wider text-juniper\\">Threshold passing</span></z-tag>
        </div>
        <p class=\\"text-sm leading-6 text-vanilla-400\\">

        </p>
      </div>
      <div class=\\"flex flex-grow flex-wrap items-center justify-between gap-2 md:flex-grow-0 md:flex-nowrap md:justify-start\\">
        <z-button button-type=\\"ghost\\" to=\\"https://docs.deepsource.com/docs/repository-view-metrics#metric-aggregate-calculation\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" icon=\\"help-circle\\" size=\\"small\\" color=\\"vanilla-100\\" class=\\"border border-dashed border-slate-400\\">How’s this calculated?</z-button>
        <div class=\\"h-8 md:w-40\\">
          <zselect-stub background-class=\\"bg-ink-200\\" border-class=\\"border-slate-400\\" border-radius=\\"rounded-sm\\" spacing=\\"px-2 py-1\\" placeholder=\\"Duration filter\\" value=\\"30\\">
            <z-option label=\\"Last 30 days\\" value=\\"30\\"></z-option>
            <z-option label=\\"Last 60 days\\" value=\\"60\\"></z-option>
            <z-option label=\\"Last 90 days\\" value=\\"90\\"></z-option>
          </zselect-stub>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"grid max-w-full grid-cols-1 gap-y-2\\">
    <div class=\\"flex flex-wrap gap-9 px-6 sm:gap-x-16\\">
      <div class=\\"flex flex-col gap-y-2.5 w-full md:w-auto\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Overall aggregate
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      85%
    </span>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <!---->
    </div>
    <div class=\\"mx-5 min-h-72 pb-2 pt-4\\" style=\\"display: none;\\">
      <div class=\\"h-full animate-pulse rounded-lg bg-ink-200 bg-opacity-30\\"></div>
    </div>
    <zchart-stub height=\\"288\\" colors=\\"juniper-500\\" type=\\"bar\\" tooltip-options=\\"[object Object]\\" axis-options=\\"[object Object]\\" y-axis-max=\\"90\\" labels=\\"May 30, 2022,Jun 1, 2022,Jun 2, 2022,Jun 3, 2022,May 28, 2022,May 31, 2022,May 29, 2022,Jun 4, 2022,Jun 5, 2022,Jun 7, 2022,Jun 6, 2022\\" datasets=\\"[object Object]\\" ymarkers=\\"[object Object]\\" class=\\"min-h-72 aggregate-chart\\"></zchart-stub>
  </div>
</div>"
`;

exports[`[[TrendSection]] renders TrendSection with all prop options: {"filterValue":30,"chartType":"bar","metricMeta":{"shortcode":"DftPnk","name":"Daft Punk","newCodeMetricShortcode":"NDftPnk","unit":""},"namespacesTrend":{"key":"javascript","valueTrend":{"labels":["2022-05-30T12:44:02.022478+00:00","2022-06-01T12:44:02.022478+00:00","2022-06-02T12:44:02.022478+00:00","2022-06-03T12:44:02.022478+00:00","2022-05-28T12:44:02.022478+00:00","2022-05-31T12:44:02.022478+00:00","2022-05-29T12:44:02.022478+00:00","2022-06-04T12:44:02.022478+00:00","2022-06-05T12:44:02.022478+00:00","2022-06-07T12:44:02.022478+00:00","2022-06-06T12:44:02.022478+00:00"],"values":[84,68,78,55,94,51,58,82,90,68,85]},"isPassing":true,"valueDisplay":"85%","analyzerShortcode":"javascript","analyzerLogo":"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg","threshold":50}} 1`] = `
"<div class=\\"space-y-8 border-b border-slate-400 py-4\\">
  <div charttype=\\"bar\\" class=\\"px-6\\">
    <div class=\\"flex flex-wrap items-start gap-x-2 gap-y-4 md:flex-nowrap\\">
      <div class=\\"flex-grow space-y-1.5\\">
        <div class=\\"flex min-h-8 items-center gap-x-3\\">
          <div class=\\"flex items-center gap-x-2\\">
            <analyzerlogo-stub size=\\"medium\\" shortcode=\\"javascript\\" name=\\"javascript\\" analyzerlogo=\\"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg\\"></analyzerlogo-stub>
            <h1 class=\\"text-lg font-medium leading-tight\\">
              javascript
            </h1>
          </div>
          <z-tag icon-left=\\"metric-high\\" icon-color=\\"juniper\\" size=\\"x-small\\" spacing=\\"px-2 py-0\\" class=\\"border border-slate-400\\"><span class=\\"py-1.5 text-xxs font-semibold uppercase leading-none tracking-wider text-juniper\\">Threshold passing</span></z-tag>
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div class=\\"grid max-w-full grid-cols-1 gap-y-2\\">
    <div class=\\"flex flex-wrap gap-9 px-6 sm:gap-x-16\\">
      <div class=\\"flex flex-col gap-y-2.5 w-full md:w-auto\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Daft Punk
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      85%
    </span>
          <!---->
        </div>
      </div>
      <z-divider color=\\"ink-200\\" direction=\\"vertical\\" margin=\\"m-0\\" class=\\"hidden h-full md:block\\"></z-divider>
      <div class=\\"flex flex-col gap-y-2.5\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Overall threshold
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      50
    </span>
          <!---->
        </div>
      </div>
      <div class=\\"flex flex-col gap-y-2.5\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            New code threshold
          </p>
        </div>
        <div>
          <z-button button-type=\\"ghost\\" icon=\\"plus\\" size=\\"x-small\\" icon-size=\\"x-small\\" color=\\"vanilla-100\\" label=\\"Add threshold\\" class=\\"border border-dashed border-slate-400\\"></z-button>
        </div>
      </div>
    </div>
    <div class=\\"mx-5 min-h-72 pb-2 pt-4\\" style=\\"display: none;\\">
      <div class=\\"h-full animate-pulse rounded-lg bg-ink-300\\"></div>
    </div>
    <zchart-stub height=\\"288\\" colors=\\"juniper-500\\" type=\\"bar\\" tooltip-options=\\"[object Object]\\" axis-options=\\"[object Object]\\" y-axis-max=\\"90\\" labels=\\"May 30, 2022,Jun 1, 2022,Jun 2, 2022,Jun 3, 2022,May 28, 2022,May 31, 2022,May 29, 2022,Jun 4, 2022,Jun 5, 2022,Jun 7, 2022,Jun 6, 2022\\" datasets=\\"[object Object]\\" ymarkers=\\"[object Object]\\" class=\\"min-h-72\\"></zchart-stub>
  </div>
</div>"
`;

exports[`[[TrendSection]] renders TrendSection with all prop options: {"filterValue":30,"chartType":"bar","metricMeta":{"shortcode":"DftPnk","name":"Daft Punk","newCodeMetricShortcode":"NDftPnk","unit":"%"},"namespacesTrend":{"key":"aggregate","valueTrend":{"labels":["2022-05-30T12:44:02.022478+00:00","2022-06-01T12:44:02.022478+00:00","2022-06-02T12:44:02.022478+00:00","2022-06-03T12:44:02.022478+00:00","2022-05-28T12:44:02.022478+00:00","2022-05-31T12:44:02.022478+00:00","2022-05-29T12:44:02.022478+00:00","2022-06-04T12:44:02.022478+00:00","2022-06-05T12:44:02.022478+00:00","2022-06-07T12:44:02.022478+00:00","2022-06-06T12:44:02.022478+00:00"],"values":[84,68,78,55,94,51,58,82,90,68,85]},"isPassing":true,"valueDisplay":"85%","analyzerShortcode":"javascript","analyzerLogo":"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg","threshold":50}} 1`] = `
"<div class=\\"space-y-8 border-b border-slate-400 py-4 bg-ink-300\\">
  <div charttype=\\"bar\\" class=\\"px-6\\">
    <div class=\\"flex flex-wrap items-start gap-x-2 gap-y-4 md:flex-nowrap\\">
      <div class=\\"flex-grow space-y-1.5\\">
        <div class=\\"flex min-h-8 items-center gap-x-3\\">
          <div class=\\"flex items-center gap-x-2\\">
            <!---->
            <h1 class=\\"text-lg font-medium leading-tight\\">
              Daft Punk
            </h1>
          </div>
          <z-tag icon-left=\\"metric-high\\" icon-color=\\"juniper\\" size=\\"x-small\\" spacing=\\"px-2 py-0\\" class=\\"border border-slate-400\\"><span class=\\"py-1.5 text-xxs font-semibold uppercase leading-none tracking-wider text-juniper\\">Threshold passing</span></z-tag>
        </div>
        <p class=\\"text-sm leading-6 text-vanilla-400\\">

        </p>
      </div>
      <div class=\\"flex flex-grow flex-wrap items-center justify-between gap-2 md:flex-grow-0 md:flex-nowrap md:justify-start\\">
        <z-button button-type=\\"ghost\\" to=\\"https://docs.deepsource.com/docs/repository-view-metrics#metric-aggregate-calculation\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" icon=\\"help-circle\\" size=\\"small\\" color=\\"vanilla-100\\" class=\\"border border-dashed border-slate-400\\">How’s this calculated?</z-button>
        <div class=\\"h-8 md:w-40\\">
          <zselect-stub background-class=\\"bg-ink-200\\" border-class=\\"border-slate-400\\" border-radius=\\"rounded-sm\\" spacing=\\"px-2 py-1\\" placeholder=\\"Duration filter\\" value=\\"30\\">
            <z-option label=\\"Last 30 days\\" value=\\"30\\"></z-option>
            <z-option label=\\"Last 60 days\\" value=\\"60\\"></z-option>
            <z-option label=\\"Last 90 days\\" value=\\"90\\"></z-option>
          </zselect-stub>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"grid max-w-full grid-cols-1 gap-y-2\\">
    <div class=\\"flex flex-wrap gap-9 px-6 sm:gap-x-16\\">
      <div class=\\"flex flex-col gap-y-2.5 w-full md:w-auto\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Overall aggregate
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      85%
    </span>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <!---->
    </div>
    <div class=\\"mx-5 min-h-72 pb-2 pt-4\\" style=\\"display: none;\\">
      <div class=\\"h-full animate-pulse rounded-lg bg-ink-200 bg-opacity-30\\"></div>
    </div>
    <zchart-stub height=\\"288\\" colors=\\"juniper-500\\" type=\\"bar\\" tooltip-options=\\"[object Object]\\" axis-options=\\"[object Object]\\" y-axis-max=\\"100\\" labels=\\"May 30, 2022,Jun 1, 2022,Jun 2, 2022,Jun 3, 2022,May 28, 2022,May 31, 2022,May 29, 2022,Jun 4, 2022,Jun 5, 2022,Jun 7, 2022,Jun 6, 2022\\" datasets=\\"[object Object]\\" ymarkers=\\"[object Object]\\" class=\\"min-h-72 aggregate-chart\\"></zchart-stub>
  </div>
</div>"
`;

exports[`[[TrendSection]] renders TrendSection with all prop options: {"filterValue":30,"chartType":"bar","metricMeta":{"shortcode":"DftPnk","name":"Daft Punk","newCodeMetricShortcode":"NDftPnk","unit":"%"},"namespacesTrend":{"key":"javascript","valueTrend":{"labels":["2022-05-30T12:44:02.022478+00:00","2022-06-01T12:44:02.022478+00:00","2022-06-02T12:44:02.022478+00:00","2022-06-03T12:44:02.022478+00:00","2022-05-28T12:44:02.022478+00:00","2022-05-31T12:44:02.022478+00:00","2022-05-29T12:44:02.022478+00:00","2022-06-04T12:44:02.022478+00:00","2022-06-05T12:44:02.022478+00:00","2022-06-07T12:44:02.022478+00:00","2022-06-06T12:44:02.022478+00:00"],"values":[84,68,78,55,94,51,58,82,90,68,85]},"isPassing":true,"valueDisplay":"85%","analyzerShortcode":"javascript","analyzerLogo":"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg","threshold":50}} 1`] = `
"<div class=\\"space-y-8 border-b border-slate-400 py-4\\">
  <div charttype=\\"bar\\" class=\\"px-6\\">
    <div class=\\"flex flex-wrap items-start gap-x-2 gap-y-4 md:flex-nowrap\\">
      <div class=\\"flex-grow space-y-1.5\\">
        <div class=\\"flex min-h-8 items-center gap-x-3\\">
          <div class=\\"flex items-center gap-x-2\\">
            <analyzerlogo-stub size=\\"medium\\" shortcode=\\"javascript\\" name=\\"javascript\\" analyzerlogo=\\"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg\\"></analyzerlogo-stub>
            <h1 class=\\"text-lg font-medium leading-tight\\">
              javascript
            </h1>
          </div>
          <z-tag icon-left=\\"metric-high\\" icon-color=\\"juniper\\" size=\\"x-small\\" spacing=\\"px-2 py-0\\" class=\\"border border-slate-400\\"><span class=\\"py-1.5 text-xxs font-semibold uppercase leading-none tracking-wider text-juniper\\">Threshold passing</span></z-tag>
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div class=\\"grid max-w-full grid-cols-1 gap-y-2\\">
    <div class=\\"flex flex-wrap gap-9 px-6 sm:gap-x-16\\">
      <div class=\\"flex flex-col gap-y-2.5 w-full md:w-auto\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Daft Punk
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      85%
    </span>
          <!---->
        </div>
      </div>
      <z-divider color=\\"ink-200\\" direction=\\"vertical\\" margin=\\"m-0\\" class=\\"hidden h-full md:block\\"></z-divider>
      <div class=\\"flex flex-col gap-y-2.5\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Overall threshold
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      50%
    </span>
          <!---->
        </div>
      </div>
      <div class=\\"flex flex-col gap-y-2.5\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            New code threshold
          </p>
        </div>
        <div>
          <z-button button-type=\\"ghost\\" icon=\\"plus\\" size=\\"x-small\\" icon-size=\\"x-small\\" color=\\"vanilla-100\\" label=\\"Add threshold\\" class=\\"border border-dashed border-slate-400\\"></z-button>
        </div>
      </div>
    </div>
    <div class=\\"mx-5 min-h-72 pb-2 pt-4\\" style=\\"display: none;\\">
      <div class=\\"h-full animate-pulse rounded-lg bg-ink-300\\"></div>
    </div>
    <zchart-stub height=\\"288\\" colors=\\"juniper-500\\" type=\\"bar\\" tooltip-options=\\"[object Object]\\" axis-options=\\"[object Object]\\" y-axis-max=\\"100\\" labels=\\"May 30, 2022,Jun 1, 2022,Jun 2, 2022,Jun 3, 2022,May 28, 2022,May 31, 2022,May 29, 2022,Jun 4, 2022,Jun 5, 2022,Jun 7, 2022,Jun 6, 2022\\" datasets=\\"[object Object]\\" ymarkers=\\"[object Object]\\" class=\\"min-h-72\\"></zchart-stub>
  </div>
</div>"
`;

exports[`[[TrendSection]] renders TrendSection with all prop options: {"filterValue":30,"chartType":"line","metricMeta":{"shortcode":"DftPnk","name":"Daft Punk","newCodeMetricShortcode":"NDftPnk","unit":""},"namespacesTrend":{"key":"aggregate","valueTrend":{"labels":["2022-05-30T12:44:02.022478+00:00","2022-06-01T12:44:02.022478+00:00","2022-06-02T12:44:02.022478+00:00","2022-06-03T12:44:02.022478+00:00","2022-05-28T12:44:02.022478+00:00","2022-05-31T12:44:02.022478+00:00","2022-05-29T12:44:02.022478+00:00","2022-06-04T12:44:02.022478+00:00","2022-06-05T12:44:02.022478+00:00","2022-06-07T12:44:02.022478+00:00","2022-06-06T12:44:02.022478+00:00"],"values":[84,68,78,55,94,51,58,82,90,68,85]},"isPassing":true,"valueDisplay":"85%","analyzerShortcode":"javascript","analyzerLogo":"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg","threshold":50}} 1`] = `
"<div class=\\"space-y-8 border-b border-slate-400 py-4 bg-ink-300\\">
  <div charttype=\\"line\\" class=\\"px-6\\">
    <div class=\\"flex flex-wrap items-start gap-x-2 gap-y-4 md:flex-nowrap\\">
      <div class=\\"flex-grow space-y-1.5\\">
        <div class=\\"flex min-h-8 items-center gap-x-3\\">
          <div class=\\"flex items-center gap-x-2\\">
            <!---->
            <h1 class=\\"text-lg font-medium leading-tight\\">
              Daft Punk
            </h1>
          </div>
          <z-tag icon-left=\\"metric-high\\" icon-color=\\"juniper\\" size=\\"x-small\\" spacing=\\"px-2 py-0\\" class=\\"border border-slate-400\\"><span class=\\"py-1.5 text-xxs font-semibold uppercase leading-none tracking-wider text-juniper\\">Threshold passing</span></z-tag>
        </div>
        <p class=\\"text-sm leading-6 text-vanilla-400\\">

        </p>
      </div>
      <div class=\\"flex flex-grow flex-wrap items-center justify-between gap-2 md:flex-grow-0 md:flex-nowrap md:justify-start\\">
        <z-button button-type=\\"ghost\\" to=\\"https://docs.deepsource.com/docs/repository-view-metrics#metric-aggregate-calculation\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" icon=\\"help-circle\\" size=\\"small\\" color=\\"vanilla-100\\" class=\\"border border-dashed border-slate-400\\">How’s this calculated?</z-button>
        <div class=\\"h-8 md:w-40\\">
          <zselect-stub background-class=\\"bg-ink-200\\" border-class=\\"border-slate-400\\" border-radius=\\"rounded-sm\\" spacing=\\"px-2 py-1\\" placeholder=\\"Duration filter\\" value=\\"30\\">
            <z-option label=\\"Last 30 days\\" value=\\"30\\"></z-option>
            <z-option label=\\"Last 60 days\\" value=\\"60\\"></z-option>
            <z-option label=\\"Last 90 days\\" value=\\"90\\"></z-option>
          </zselect-stub>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"grid max-w-full grid-cols-1 gap-y-2\\">
    <div class=\\"flex flex-wrap gap-9 px-6 sm:gap-x-16\\">
      <div class=\\"flex flex-col gap-y-2.5 w-full md:w-auto\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Overall aggregate
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      85%
    </span>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <!---->
    </div>
    <div class=\\"mx-5 min-h-72 pb-2 pt-4\\" style=\\"display: none;\\">
      <div class=\\"h-full animate-pulse rounded-lg bg-ink-200 bg-opacity-30\\"></div>
    </div>
    <zchart-stub height=\\"288\\" colors=\\"juniper-500\\" type=\\"line\\" tooltip-options=\\"[object Object]\\" axis-options=\\"[object Object]\\" y-axis-max=\\"117.5\\" labels=\\"May 30, 2022,Jun 1, 2022,Jun 2, 2022,Jun 3, 2022,May 28, 2022,May 31, 2022,May 29, 2022,Jun 4, 2022,Jun 5, 2022,Jun 7, 2022,Jun 6, 2022\\" datasets=\\"[object Object]\\" ymarkers=\\"[object Object]\\" class=\\"min-h-72 aggregate-chart\\"></zchart-stub>
  </div>
</div>"
`;

exports[`[[TrendSection]] renders TrendSection with all prop options: {"filterValue":30,"chartType":"line","metricMeta":{"shortcode":"DftPnk","name":"Daft Punk","newCodeMetricShortcode":"NDftPnk","unit":""},"namespacesTrend":{"key":"javascript","valueTrend":{"labels":["2022-05-30T12:44:02.022478+00:00","2022-06-01T12:44:02.022478+00:00","2022-06-02T12:44:02.022478+00:00","2022-06-03T12:44:02.022478+00:00","2022-05-28T12:44:02.022478+00:00","2022-05-31T12:44:02.022478+00:00","2022-05-29T12:44:02.022478+00:00","2022-06-04T12:44:02.022478+00:00","2022-06-05T12:44:02.022478+00:00","2022-06-07T12:44:02.022478+00:00","2022-06-06T12:44:02.022478+00:00"],"values":[84,68,78,55,94,51,58,82,90,68,85]},"isPassing":true,"valueDisplay":"85%","analyzerShortcode":"javascript","analyzerLogo":"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg","threshold":50}} 1`] = `
"<div class=\\"space-y-8 border-b border-slate-400 py-4\\">
  <div charttype=\\"line\\" class=\\"px-6\\">
    <div class=\\"flex flex-wrap items-start gap-x-2 gap-y-4 md:flex-nowrap\\">
      <div class=\\"flex-grow space-y-1.5\\">
        <div class=\\"flex min-h-8 items-center gap-x-3\\">
          <div class=\\"flex items-center gap-x-2\\">
            <analyzerlogo-stub size=\\"medium\\" shortcode=\\"javascript\\" name=\\"javascript\\" analyzerlogo=\\"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg\\"></analyzerlogo-stub>
            <h1 class=\\"text-lg font-medium leading-tight\\">
              javascript
            </h1>
          </div>
          <z-tag icon-left=\\"metric-high\\" icon-color=\\"juniper\\" size=\\"x-small\\" spacing=\\"px-2 py-0\\" class=\\"border border-slate-400\\"><span class=\\"py-1.5 text-xxs font-semibold uppercase leading-none tracking-wider text-juniper\\">Threshold passing</span></z-tag>
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div class=\\"grid max-w-full grid-cols-1 gap-y-2\\">
    <div class=\\"flex flex-wrap gap-9 px-6 sm:gap-x-16\\">
      <div class=\\"flex flex-col gap-y-2.5 w-full md:w-auto\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Daft Punk
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      85%
    </span>
          <!---->
        </div>
      </div>
      <z-divider color=\\"ink-200\\" direction=\\"vertical\\" margin=\\"m-0\\" class=\\"hidden h-full md:block\\"></z-divider>
      <div class=\\"flex flex-col gap-y-2.5\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Overall threshold
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      50
    </span>
          <!---->
        </div>
      </div>
      <div class=\\"flex flex-col gap-y-2.5\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            New code threshold
          </p>
        </div>
        <div>
          <z-button button-type=\\"ghost\\" icon=\\"plus\\" size=\\"x-small\\" icon-size=\\"x-small\\" color=\\"vanilla-100\\" label=\\"Add threshold\\" class=\\"border border-dashed border-slate-400\\"></z-button>
        </div>
      </div>
    </div>
    <div class=\\"mx-5 min-h-72 pb-2 pt-4\\" style=\\"display: none;\\">
      <div class=\\"h-full animate-pulse rounded-lg bg-ink-300\\"></div>
    </div>
    <zchart-stub height=\\"288\\" colors=\\"juniper-500\\" type=\\"line\\" tooltip-options=\\"[object Object]\\" axis-options=\\"[object Object]\\" y-axis-max=\\"117.5\\" labels=\\"May 30, 2022,Jun 1, 2022,Jun 2, 2022,Jun 3, 2022,May 28, 2022,May 31, 2022,May 29, 2022,Jun 4, 2022,Jun 5, 2022,Jun 7, 2022,Jun 6, 2022\\" datasets=\\"[object Object]\\" ymarkers=\\"[object Object]\\" class=\\"min-h-72\\"></zchart-stub>
  </div>
</div>"
`;

exports[`[[TrendSection]] renders TrendSection with all prop options: {"filterValue":30,"chartType":"line","metricMeta":{"shortcode":"DftPnk","name":"Daft Punk","newCodeMetricShortcode":"NDftPnk","unit":"%"},"namespacesTrend":{"key":"aggregate","valueTrend":{"labels":["2022-05-30T12:44:02.022478+00:00","2022-06-01T12:44:02.022478+00:00","2022-06-02T12:44:02.022478+00:00","2022-06-03T12:44:02.022478+00:00","2022-05-28T12:44:02.022478+00:00","2022-05-31T12:44:02.022478+00:00","2022-05-29T12:44:02.022478+00:00","2022-06-04T12:44:02.022478+00:00","2022-06-05T12:44:02.022478+00:00","2022-06-07T12:44:02.022478+00:00","2022-06-06T12:44:02.022478+00:00"],"values":[84,68,78,55,94,51,58,82,90,68,85]},"isPassing":true,"valueDisplay":"85%","analyzerShortcode":"javascript","analyzerLogo":"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg","threshold":50}} 1`] = `
"<div class=\\"space-y-8 border-b border-slate-400 py-4 bg-ink-300\\">
  <div charttype=\\"line\\" class=\\"px-6\\">
    <div class=\\"flex flex-wrap items-start gap-x-2 gap-y-4 md:flex-nowrap\\">
      <div class=\\"flex-grow space-y-1.5\\">
        <div class=\\"flex min-h-8 items-center gap-x-3\\">
          <div class=\\"flex items-center gap-x-2\\">
            <!---->
            <h1 class=\\"text-lg font-medium leading-tight\\">
              Daft Punk
            </h1>
          </div>
          <z-tag icon-left=\\"metric-high\\" icon-color=\\"juniper\\" size=\\"x-small\\" spacing=\\"px-2 py-0\\" class=\\"border border-slate-400\\"><span class=\\"py-1.5 text-xxs font-semibold uppercase leading-none tracking-wider text-juniper\\">Threshold passing</span></z-tag>
        </div>
        <p class=\\"text-sm leading-6 text-vanilla-400\\">

        </p>
      </div>
      <div class=\\"flex flex-grow flex-wrap items-center justify-between gap-2 md:flex-grow-0 md:flex-nowrap md:justify-start\\">
        <z-button button-type=\\"ghost\\" to=\\"https://docs.deepsource.com/docs/repository-view-metrics#metric-aggregate-calculation\\" target=\\"_blank\\" rel=\\"noreferrer noopener\\" icon=\\"help-circle\\" size=\\"small\\" color=\\"vanilla-100\\" class=\\"border border-dashed border-slate-400\\">How’s this calculated?</z-button>
        <div class=\\"h-8 md:w-40\\">
          <zselect-stub background-class=\\"bg-ink-200\\" border-class=\\"border-slate-400\\" border-radius=\\"rounded-sm\\" spacing=\\"px-2 py-1\\" placeholder=\\"Duration filter\\" value=\\"30\\">
            <z-option label=\\"Last 30 days\\" value=\\"30\\"></z-option>
            <z-option label=\\"Last 60 days\\" value=\\"60\\"></z-option>
            <z-option label=\\"Last 90 days\\" value=\\"90\\"></z-option>
          </zselect-stub>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"grid max-w-full grid-cols-1 gap-y-2\\">
    <div class=\\"flex flex-wrap gap-9 px-6 sm:gap-x-16\\">
      <div class=\\"flex flex-col gap-y-2.5 w-full md:w-auto\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Overall aggregate
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      85%
    </span>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <!---->
    </div>
    <div class=\\"mx-5 min-h-72 pb-2 pt-4\\" style=\\"display: none;\\">
      <div class=\\"h-full animate-pulse rounded-lg bg-ink-200 bg-opacity-30\\"></div>
    </div>
    <zchart-stub height=\\"288\\" colors=\\"juniper-500\\" type=\\"line\\" tooltip-options=\\"[object Object]\\" axis-options=\\"[object Object]\\" y-axis-max=\\"100\\" labels=\\"May 30, 2022,Jun 1, 2022,Jun 2, 2022,Jun 3, 2022,May 28, 2022,May 31, 2022,May 29, 2022,Jun 4, 2022,Jun 5, 2022,Jun 7, 2022,Jun 6, 2022\\" datasets=\\"[object Object]\\" ymarkers=\\"[object Object]\\" class=\\"min-h-72 aggregate-chart\\"></zchart-stub>
  </div>
</div>"
`;

exports[`[[TrendSection]] renders TrendSection with all prop options: {"filterValue":30,"chartType":"line","metricMeta":{"shortcode":"DftPnk","name":"Daft Punk","newCodeMetricShortcode":"NDftPnk","unit":"%"},"namespacesTrend":{"key":"javascript","valueTrend":{"labels":["2022-05-30T12:44:02.022478+00:00","2022-06-01T12:44:02.022478+00:00","2022-06-02T12:44:02.022478+00:00","2022-06-03T12:44:02.022478+00:00","2022-05-28T12:44:02.022478+00:00","2022-05-31T12:44:02.022478+00:00","2022-05-29T12:44:02.022478+00:00","2022-06-04T12:44:02.022478+00:00","2022-06-05T12:44:02.022478+00:00","2022-06-07T12:44:02.022478+00:00","2022-06-06T12:44:02.022478+00:00"],"values":[84,68,78,55,94,51,58,82,90,68,85]},"isPassing":true,"valueDisplay":"85%","analyzerShortcode":"javascript","analyzerLogo":"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg","threshold":50}} 1`] = `
"<div class=\\"space-y-8 border-b border-slate-400 py-4\\">
  <div charttype=\\"line\\" class=\\"px-6\\">
    <div class=\\"flex flex-wrap items-start gap-x-2 gap-y-4 md:flex-nowrap\\">
      <div class=\\"flex-grow space-y-1.5\\">
        <div class=\\"flex min-h-8 items-center gap-x-3\\">
          <div class=\\"flex items-center gap-x-2\\">
            <analyzerlogo-stub size=\\"medium\\" shortcode=\\"javascript\\" name=\\"javascript\\" analyzerlogo=\\"https://local-asgard-static.s3.us-east-1.amazonaws.com/analyzer_logos/javascript.svg\\"></analyzerlogo-stub>
            <h1 class=\\"text-lg font-medium leading-tight\\">
              javascript
            </h1>
          </div>
          <z-tag icon-left=\\"metric-high\\" icon-color=\\"juniper\\" size=\\"x-small\\" spacing=\\"px-2 py-0\\" class=\\"border border-slate-400\\"><span class=\\"py-1.5 text-xxs font-semibold uppercase leading-none tracking-wider text-juniper\\">Threshold passing</span></z-tag>
        </div>
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div class=\\"grid max-w-full grid-cols-1 gap-y-2\\">
    <div class=\\"flex flex-wrap gap-9 px-6 sm:gap-x-16\\">
      <div class=\\"flex flex-col gap-y-2.5 w-full md:w-auto\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Daft Punk
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      85%
    </span>
          <!---->
        </div>
      </div>
      <z-divider color=\\"ink-200\\" direction=\\"vertical\\" margin=\\"m-0\\" class=\\"hidden h-full md:block\\"></z-divider>
      <div class=\\"flex flex-col gap-y-2.5\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            Overall threshold
          </p>
        </div>
        <div class=\\"flex h-6 flex-shrink-0 items-center gap-x-2\\"><span class=\\"text-base font-semibold leading-8\\">
      50%
    </span>
          <!---->
        </div>
      </div>
      <div class=\\"flex flex-col gap-y-2.5\\">
        <div class=\\"flex flex-grow items-end\\">
          <p class=\\"text-xs font-semibold uppercase leading-7 tracking-wider text-vanilla-400\\">
            New code threshold
          </p>
        </div>
        <div>
          <z-button button-type=\\"ghost\\" icon=\\"plus\\" size=\\"x-small\\" icon-size=\\"x-small\\" color=\\"vanilla-100\\" label=\\"Add threshold\\" class=\\"border border-dashed border-slate-400\\"></z-button>
        </div>
      </div>
    </div>
    <div class=\\"mx-5 min-h-72 pb-2 pt-4\\" style=\\"display: none;\\">
      <div class=\\"h-full animate-pulse rounded-lg bg-ink-300\\"></div>
    </div>
    <zchart-stub height=\\"288\\" colors=\\"juniper-500\\" type=\\"line\\" tooltip-options=\\"[object Object]\\" axis-options=\\"[object Object]\\" y-axis-max=\\"100\\" labels=\\"May 30, 2022,Jun 1, 2022,Jun 2, 2022,Jun 3, 2022,May 28, 2022,May 31, 2022,May 29, 2022,Jun 4, 2022,Jun 5, 2022,Jun 7, 2022,Jun 6, 2022\\" datasets=\\"[object Object]\\" ymarkers=\\"[object Object]\\" class=\\"min-h-72\\"></zchart-stub>
  </div>
</div>"
`;
